v1.1.0/_sources/plc-kfe-rix-motion_kfe_rix_motion_source.rst.txt


DUTs
----


GVLs
----


Global_Version
^^^^^^^^^^^^^^

::

    {attribute 'TcGenerated'}
    // This function has been automatically generated from the project information.
    VAR_GLOBAL CONSTANT
        {attribute 'const_non_replaced'}
        {attribute 'linkalways'}
        stLibVersion_plc_kfe_rix_motion : ST_LibVersion := (iMajor := 1, iMinor := 1, iBuild := 0, iRevision := 0, sVersion := '1.1.0');
    END_VAR


GVL
^^^

::

    {attribute 'qualified_only'}
    VAR_GLOBAL
        {attribute 'pytmc' := 'pv: PLC:RIX:MOTION:ARB'}
        fbArbiter: FB_Arbiter(1);

        // For devices between the mirror and the stopper
        {attribute 'pytmc' := 'pv: PLC:RIX:MOTION:FFO:01'}
        {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO]^Channel 1^Output'}
        fbFastFaultOutput1: FB_HardwareFFOutput := (bAutoReset := TRUE);

        // For devices after the stopper
        {attribute 'pytmc' := 'pv: PLC:RIX:MOTION:FFO:02'}
        {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO]^Channel 2^Output'}
        fbFastFaultOutput2: FB_HardwareFFOutput := (bAutoReset := TRUE);
    END_VAR


Main
^^^^

::

    {attribute 'qualified_only'}
    VAR_GLOBAL
        // IM1K1-PPM-MMS
        {attribute 'pytmc' := 'pv: IM1K1:PPM:MMS'}
        {attribute 'TcLinkTo' := '.bLimitForwardEnable  := TIIB[IM1K1-EL7041]^STM Status^Status^Digital input 1;
                                  .bLimitBackwardEnable := TIIB[IM1K1-EL7041]^STM Status^Status^Digital input 2;
                                  .bBrakeRelease        := TIIB[IM1K1-EL2004]^Channel 1^Output'}
        M1: DUT_MotionStage := (sName := 'IM1K1:PPM:MMS');

        // IM2K1-PPM-MMS
        {attribute 'pytmc' := 'pv: IM2K1:PPM:MMS'}
        {attribute 'TcLinkTo' := '.bLimitForwardEnable  := TIIB[IM2K1-EL7041]^STM Status^Status^Digital input 1;
                                  .bLimitBackwardEnable := TIIB[IM2K1-EL7041]^STM Status^Status^Digital input 2;
                                  .bBrakeRelease        := TIIB[IM2K1-EL2004]^Channel 1^Output'}
        M2: DUT_MotionStage := (sName := 'IM2K1:PPM:MMS');

        // SPARE (Previously ZOS)
        M3: DUT_MotionStage;

        // IM1K2-PPM-MMS
        {attribute 'pytmc' := 'pv: IM1K2:PPM:MMS'}
        {attribute 'TcLinkTo' := '.bLimitForwardEnable  := TIIB[IM1K2-EL7041-E1]^STM Status^Status^Digital input 1;
                                  .bLimitBackwardEnable := TIIB[IM1K2-EL7041-E1]^STM Status^Status^Digital input 2;
                                  .bBrakeRelease        := TIIB[IM1K2-EL2004-E3]^Channel 1^Output'}
        M4: DUT_MotionStage := (sName := 'IM1K2:PPM:MMS');

        // AL1K2-L2SI: 1 Axis
        {attribute 'pytmc' := 'pv: AL1K2:L2SI:MMS'}
        {attribute 'TcLinkTo' := '.bLimitForwardEnable  := TIIB[AL1K2-EL7041-E1]^STM Status^Status^Digital input 1;
                                  .bLimitBackwardEnable := TIIB[AL1K2-EL7041-E1]^STM Status^Status^Digital input 2;
                                  .bBrakeRelease        := TIIB[AL1K2-EL2004-E3]^Channel 1^Output;
                                  .nRawEncoderULINT     := TIIB[AL1K2-EL5042-E2]^FB Inputs Channel 1^Position'}
        M5: DUT_MotionStage := (sName := 'AL1K2:L2SI:MMS');

        // IM2K2-PPM-MMS
        {attribute 'pytmc' := 'pv: IM2K2:PPM:MMS'}
        {attribute 'TcLinkTo' := '.bLimitForwardEnable  := TIIB[IM2K2-EL7041-E1]^STM Status^Status^Digital input 1;
                                  .bLimitBackwardEnable := TIIB[IM2K2-EL7041-E1]^STM Status^Status^Digital input 2;
                                  .bBrakeRelease        := TIIB[IM2K2-EL2004-E3]^Channel 1^Output'}
        M6: DUT_MotionStage := (sName := 'IM2K2:PPM:MMS');

        // IM3K2-PPM-MMS
        {attribute 'pytmc' := 'pv: IM3K2:PPM:MMS'}
        {attribute 'TcLinkTo' := '.bLimitForwardEnable  := TIIB[IM3K2-EL7041-E1]^STM Status^Status^Digital input 1;
                                  .bLimitBackwardEnable := TIIB[IM3K2-EL7041-E1]^STM Status^Status^Digital input 2;
                                  .bBrakeRelease        := TIIB[IM3K2-EL2004-E3]^Channel 1^Output'}
        M7: DUT_MotionStage := (sName := 'IM3K2:PPM:MMS');

        // IM4K2-PPM-MMS
        {attribute 'pytmc' := 'pv: IM4K2:PPM:MMS'}
        {attribute 'TcLinkTo' := '.bLimitForwardEnable  := TIIB[IM4K2-EL7041-E1]^STM Status^Status^Digital input 1;
                                  .bLimitBackwardEnable := TIIB[IM4K2-EL7041-E1]^STM Status^Status^Digital input 2;
                                  .bBrakeRelease        := TIIB[IM4K2-EL2004-E3]^Channel 1^Output'}
        M8: DUT_MotionStage := (sName := 'IM4K2:PPM:MMS');

        // TM1K2: 2 Axes
        {attribute 'pytmc' := 'pv: TM1K2:ATM:MMS:Y'}
        {attribute 'TcLinkTo' := '.bLimitForwardEnable  := TIIB[TM1K2-EL7041-E1]^STM Status^Status^Digital input 1;
                                  .bLimitBackwardEnable := TIIB[TM1K2-EL7041-E1]^STM Status^Status^Digital input 2;
                                  .bBrakeRelease        := TIIB[TM1K2-EL2004-E4]^Channel 1^Output;
                                  .nRawEncoderULINT     := TIIB[TM1K2-EL5042-E3]^FB Inputs Channel 1^Position'}
        M9: DUT_MotionStage := (sName := 'TM1K2:ATM:MMS:Y');
        {attribute 'pytmc' := 'pv: TM1K2:ATM:MMS:X'}
        {attribute 'TcLinkTo' := '.nRawEncoderULINT     := TIIB[TM1K2-EL5042-E3]^FB Inputs Channel 2^Position'}
        M10: DUT_MotionStage := (sName := 'TM1K2:ATM:MMS:X');

        // LI2K2-K2A_OUT: 1 Axis
        {attribute 'pytmc' := 'pv: LI2K2:K2A:MMS'}
        {attribute 'TcLinkTo' := '.bLimitForwardEnable  := TIIB[LI2K2-EL7041-E1]^STM Status^Status^Digital input 1;
                                  .bLimitBackwardEnable := TIIB[LI2K2-EL7041-E1]^STM Status^Status^Digital input 2;
                                  .bBrakeRelease        := TIIB[LI2K2-EL2004-E2]^Channel 1^Output;
                                  .nRawEncoderULINT     := TIIB[LI2K2-EL5042-E3]^FB Inputs Channel 1^Position'}
        M11: DUT_MotionStage := (sName := 'LI2K2:K2A:MMS');

        // PF1K2-WFS: 2 Axes
        {attribute 'pytmc' := 'pv: PF1K2:WFS:MMS:Y'}
        {attribute 'TcLinkTo' := '.bLimitForwardEnable  := TIIB[PF1K2-EL7041-E1]^STM Status^Status^Digital input 1;
                                  .bLimitBackwardEnable := TIIB[PF1K2-EL7041-E1]^STM Status^Status^Digital input 2;
                                  .bBrakeRelease        := TIIB[PF1K2-EL2004-E4]^Channel 1^Output;
                                  .nRawEncoderULINT     := TIIB[PF1K2-EL5042-E3]^FB Inputs Channel 2^Position'}
        M12: DUT_MotionStage := (sName := 'PF1K2:WFS:MMS:Y');
        {attribute 'pytmc' := 'pv: PF1K2:WFS:MMS:Z'}
        {attribute 'TcLinkTo' := '.nRawEncoderULINT     := TIIB[PF1K2-EL5042-E3]^FB Inputs Channel 1^Position'}
        M13: DUT_MotionStage := (sName := 'PF1K2:WFS:MMS:Z');

        // IM5K2-PPM-MMS
        {attribute 'pytmc' := 'pv: IM5K2:PPM:MMS'}
        {attribute 'TcLinkTo' := '.bLimitForwardEnable  := TIIB[IM5K2-EL7041-E1]^STM Status^Status^Digital input 1;
                                  .bLimitBackwardEnable := TIIB[IM5K2-EL7041-E1]^STM Status^Status^Digital input 2;
                                  .bBrakeRelease        := TIIB[IM5K2-EL2004-E3]^Channel 1^Output'}
        M14: DUT_MotionStage := (sName := 'IM5K2:PPM:MMS');

        // TM2K2: 2 Axes
        {attribute 'pytmc' := 'pv: TM2K2:ATM:MMS:Y'}
        {attribute 'TcLinkTo' := '.bLimitForwardEnable  := TIIB[TM2K2-EL7041-E1]^STM Status^Status^Digital input 1;
                                  .bLimitBackwardEnable := TIIB[TM2K2-EL7041-E1]^STM Status^Status^Digital input 2;
                                  .bBrakeRelease        := TIIB[TM2K2-EL2004-E4]^Channel 1^Output;
                                  .nRawEncoderULINT     := TIIB[TM2K2-EL5042-E3]^FB Inputs Channel 1^Position'}
        M15: DUT_MotionStage := (sName := 'TM2K2:ATM:MMS:Y');
        {attribute 'pytmc' := 'pv: TM2K2:ATM:MMS:X'}
        {attribute 'TcLinkTo' := '.nRawEncoderULINT     := TIIB[TM2K2-EL5042-E3]^FB Inputs Channel 2^Position'}
        M16: DUT_MotionStage := (sName := 'TM2K2:ATM:MMS:X');

        //AT2K2: 4 Axes
        //M17: DUT_MotionStage;
        //M18: DUT_MotionStage;
        //M19: DUT_MotionStage;
        //M20: DUT_MotionStage;


        //LI3K2: 1 Axis
        //M21: DUT_MotionStage;

        //LI4K2_OUT: 1 Axis
        //M22: DUT_MotionStage;


        //PF2K2: 2 Axes
        //M23: DUT_MotionStage;
        //M24: DUT_MotionStage;

        //IM6K2: 1 Axis
        //M25: DUT_MotionStage;

        //ST3K2: 1 Axis
        //M26: DUT_MotionStage;



    END_VAR


POUs
----


PRG_1_PlcTask
^^^^^^^^^^^^^

::

    PROGRAM PRG_1_PlcTask
    VAR
        bDebug: BOOL := FALSE;
    END_VAR
    PRG_2_PMPS_PRE();

    // Temporarily disable motors by setting bHardwareEnable to FALSE prior to running motion FB
    Main.M5.bHardwareEnable := bDebug;
    Main.M6.bHardwareEnable := bDebug;
    Main.M7.bHardwareEnable := bDebug;
    Main.M8.bHardwareEnable := bDebug;
    Main.M9.bHardwareEnable := bDebug;
    Main.M10.bHardwareEnable := bDebug;
    Main.M11.bHardwareEnable := bDebug;
    Main.M12.bHardwareEnable := bDebug;
    Main.M13.bHardwareEnable := bDebug;
    Main.M14.bHardwareEnable := bDebug;
    Main.M15.bHardwareEnable := bDebug;
    Main.M16.bHardwareEnable := bDebug;

    PRG_IM1K1_PPM();
    PRG_IM2K1_PPM();
    PRG_IM1K2_PPM();
    PRG_AL1K2_L2SI();
    PRG_IM2K2_PPM();
    PRG_IM3K2_PPM();
    PRG_IM4K2_PPM();
    PRG_TM1K2_ATM();
    PRG_LI2K2_K2A();
    PRG_PF1K2_WFS();
    PRG_IM5K2_PPM();
    PRG_TM2K2_ATM();

    PRG_3_PMPS_POST();
    PRG_4_LOG();

    END_PROGRAM


PRG_2_PMPS_PRE
^^^^^^^^^^^^^^

::

    PROGRAM PRG_2_PMPS_PRE
    VAR
    END_VAR


    END_PROGRAM


PRG_3_PMPS_POST
^^^^^^^^^^^^^^^

::

    PROGRAM PRG_3_PMPS_POST
    VAR
        fbArbiterIO: FB_SubSysToArbiter_IO;
        bMR1K1_Veto: BOOL;
        bST1K2_Veto: BOOL;
        bST1K2_Veto_Override: BOOL := FALSE;
    END_VAR
    bMR1K1_Veto := PMPS_GVL.stCurrentBeamParameters.aStoppers[PMPS.K_Stopper.MR1K1_OUT] AND NOT PMPS_GVL.stCurrentBeamParameters.aStoppers[PMPS.K_Stopper.MR1K1_IN];
    bST1K2_Veto := bST1K2_Veto_Override OR PMPS_GVL.stCurrentBeamParameters.aStoppers[PMPS.K_Stopper.ST1K2];

    fbArbiterIO(
        i_bVeto:=bMR1K1_Veto,
        Arbiter:=GVL.fbArbiter,
        fbFFHWO:=GVL.fbFastFaultOutput1);

    GVL.fbFastFaultOutput1.Execute(i_xVeto:=bMR1K1_Veto);
    GVL.fbFastFaultOutput2.Execute(i_xVeto:=bMR1K1_Veto OR bST1K2_Veto);

    END_PROGRAM


PRG_4_LOG
^^^^^^^^^

::

    PROGRAM PRG_4_LOG
    VAR
        fbLogHandler: FB_LogHandler;
    END_VAR
    fbLogHandler();

    END_PROGRAM


PRG_AL1K2_L2SI
^^^^^^^^^^^^^^

::

    PROGRAM PRG_AL1K2_L2SI
    VAR
        {attribute 'pytmc' := '
            pv: AL1K2:L2SI
            io: io
        '}
        {attribute 'TcLinkTo' := '.fbLaser.iLaserINT := TIIB[AL1K2-EL4004-E4]^AO Outputs Channel 1^Analog output;
                                  .fbLaser.iShutdownINT := TIIB[AL1K2-EL4004-E4]^AO Outputs Channel 2^Analog output'}
        fbAL1K2: FB_REF;
    END_VAR
    fbAL1K2.nTransitionAssertionID := 16#6120;
    fbAL1K2.nUnknownAssertionID := 16#6129;

    fbAL1K2.stOut.fPosition := -33.5; // Upper limit
    fbAL1K2.stOut.bUseRawCounts := FALSE;
    fbAL1K2.stOut.nRequestAssertionID := 16#6121;
    fbAL1K2.stOut.stBeamParams := PMPS_GVL.cstFullBeam;
    fbAL1K2.stOut.bValid := TRUE;

    fbAL1K2.stIn.fPosition := -75; // Current position at time of edit
    fbAL1K2.stIn.bUseRawCounts := FALSE;
    fbAL1K2.stIn.nRequestAssertionID := 16#6122;
    fbAL1K2.stIn.stBeamParams := PMPS_GVL.cst0RateBeam;
    fbAL1K2.stIn.bValid := TRUE;

    fbAL1K2(
        stYStage := Main.M5,
        fbArbiter := GVL.fbArbiter,
        fbFFHWO := GVL.fbFastFaultOutput2);

    END_PROGRAM


PRG_IM1K1_PPM
^^^^^^^^^^^^^

::

    PROGRAM PRG_IM1K1_PPM
    VAR
        {attribute 'pytmc' := '
            pv: IM1K1:PPM
            io: io
        '}
        {attribute 'TcLinkTo' := '.fbGige.iIlluminatorINT := TIIB[IM1K1-EL4004]^AO Outputs Channel 1^Analog output;
                                  .fbGige.bGigePower := TIIB[IM1K1-EL2004]^Channel 2^Output;
                                  .fbPowerMeter.iVoltageINT := TIIB[IM1K1-EL3062]^AI Standard Channel 1^Value;
                                  .fbPowerMeter.fbThermoCouple.bError := TIIB[IM1K1-EL3314]^TC Inputs Channel 1^Status^Error;
                                  .fbPowerMeter.fbThermoCouple.bUnderrange := TIIB[IM1K1-EL3314]^TC Inputs Channel 1^Status^Underrange;
                                  .fbPowerMeter.fbThermoCouple.bOverrange := TIIB[IM1K1-EL3314]^TC Inputs Channel 1^Status^Overrange;
                                  .fbPowerMeter.fbThermoCouple.iRaw := TIIB[IM1K1-EL3314]^TC Inputs Channel 1^Value;
                                  .fbYagThermoCouple.bError := TIIB[IM1K1-EL3314]^TC Inputs Channel 2^Status^Error;
                                  .fbYagThermoCouple.bUnderrange := TIIB[IM1K1-EL3314]^TC Inputs Channel 2^Status^Underrange;
                                  .fbYagThermoCouple.bOverrange := TIIB[IM1K1-EL3314]^TC Inputs Channel 2^Status^Overrange;
                                  .fbYagThermoCouple.iRaw := TIIB[IM1K1-EL3314]^TC Inputs Channel 2^Value'}
        fbIM1K1: FB_PPM;
    END_VAR
    fbIM1K1.nTransitionAssertionID := 16#2110;
    fbIM1K1.nUnknownAssertionID := 16#2119;

    fbIM1K1.stOut.fPosition := -8.82;
    fbIM1K1.stOut.bUseRawCounts := FALSE;
    fbIM1K1.stOut.nRequestAssertionID := 16#2111;
    fbIM1K1.stOut.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM1K1.stOut.bValid := TRUE;

    fbIM1K1.stPower.fPosition := -47.92;
    fbIM1K1.stPower.bUseRawCounts := FALSE;
    fbIM1K1.stPower.nRequestAssertionID := 16#2112;
    fbIM1K1.stPower.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM1K1.stPower.bValid := TRUE;

    fbIM1K1.stYag1.fPosition := -71.92;
    fbIM1K1.stYag1.bUseRawCounts := FALSE;
    fbIM1K1.stYag1.nRequestAssertionID := 16#2113;
    fbIM1K1.stYag1.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM1K1.stYag1.bValid := TRUE;

    fbIM1K1.stYag2.fPosition := -97.93;
    fbIM1K1.stYag2.bUseRawCounts := FALSE;
    fbIM1K1.stYag2.nRequestAssertionID := 16#2114;
    fbIM1K1.stYag2.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM1K1.stYag2.bValid := TRUE;

    fbIM1K1(
        fbArbiter := GVL.fbArbiter,
        fbFFHWO := GVL.fbFastFaultOutput1,
        stYStage := Main.M1);

    END_PROGRAM


PRG_IM1K2_PPM
^^^^^^^^^^^^^

::

    PROGRAM PRG_IM1K2_PPM
    VAR
        {attribute 'pytmc' := '
            pv: IM1K2:PPM
            io: io
        '}
        {attribute 'TcLinkTo' := '.fbGige.iIlluminatorINT := TIIB[IM1K2-EL4004-E7]^AO Outputs Channel 1^Analog output;
                                  .fbGige.bGigePower := TIIB[IM1K2-EL2004-E3]^Channel 2^Output;
                                  .fbPowerMeter.iVoltageINT := TIIB[IM1K2-EL3062-E6]^AI Standard Channel 1^Value;
                                  .fbPowerMeter.fbThermoCouple.bError := TIIB[IM1K2-EL3314-E4]^TC Inputs Channel 1^Status^Error;
                                  .fbPowerMeter.fbThermoCouple.bUnderrange := TIIB[IM1K2-EL3314-E4]^TC Inputs Channel 1^Status^Underrange;
                                  .fbPowerMeter.fbThermoCouple.bOverrange := TIIB[IM1K2-EL3314-E4]^TC Inputs Channel 1^Status^Overrange;
                                  .fbPowerMeter.fbThermoCouple.iRaw := TIIB[IM1K2-EL3314-E4]^TC Inputs Channel 1^Value;
                                  .fbYagThermoCouple.bError := TIIB[IM1K2-EL3314-E4]^TC Inputs Channel 2^Status^Error;
                                  .fbYagThermoCouple.bUnderrange := TIIB[IM1K2-EL3314-E4]^TC Inputs Channel 2^Status^Underrange;
                                  .fbYagThermoCouple.bOverrange := TIIB[IM1K2-EL3314-E4]^TC Inputs Channel 2^Status^Overrange;
                                  .fbYagThermoCouple.iRaw := TIIB[IM1K2-EL3314-E4]^TC Inputs Channel 2^Value'}
        fbIM1K2: FB_PPM;
    END_VAR
    fbIM1K2.nTransitionAssertionID := 16#2120;
    fbIM1K2.nUnknownAssertionID := 16#2129;

    fbIM1K2.stOut.fPosition := -9.82;
    fbIM1K2.stOut.bUseRawCounts := FALSE;
    fbIM1K2.stOut.nRequestAssertionID := 16#2121;
    fbIM1K2.stOut.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM1K2.stOut.bValid := TRUE;

    fbIM1K2.stPower.fPosition := -48.92;
    fbIM1K2.stPower.bUseRawCounts := FALSE;
    fbIM1K2.stPower.nRequestAssertionID := 16#2122;
    fbIM1K2.stPower.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM1K2.stPower.bValid := TRUE;

    fbIM1K2.stYag1.fPosition := -72.92;
    fbIM1K2.stYag1.bUseRawCounts := FALSE;
    fbIM1K2.stYag1.nRequestAssertionID := 16#2123;
    fbIM1K2.stYag1.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM1K2.stYag1.bValid := TRUE;

    fbIM1K2.stYag2.fPosition := -98.93;
    fbIM1K2.stYag2.bUseRawCounts := FALSE;
    fbIM1K2.stYag2.nRequestAssertionID := 16#2124;
    fbIM1K2.stYag2.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM1K2.stYag2.bValid := TRUE;

    fbIM1K2(
        fbArbiter := GVL.fbArbiter,
        fbFFHWO := GVL.fbFastFaultOutput1,
        stYStage := Main.M4);

    END_PROGRAM


PRG_IM2K1_PPM
^^^^^^^^^^^^^

::

    PROGRAM PRG_IM2K1_PPM
    VAR
        {attribute 'pytmc' := '
            pv: IM2K1:PPM
            io: io
        '}
        {attribute 'TcLinkTo' := '.fbGige.iIlluminatorINT := TIIB[IM2K1-EL4004]^AO Outputs Channel 1^Analog output;
                                  .fbGige.bGigePower := TIIB[IM2K1-EL2004]^Channel 2^Output;
                                  .fbPowerMeter.iVoltageINT := TIIB[IM2K1-EL3062]^AI Standard Channel 1^Value;
                                  .fbPowerMeter.fbThermoCouple.bError := TIIB[IM2K1-EL3314]^TC Inputs Channel 1^Status^Error;
                                  .fbPowerMeter.fbThermoCouple.bUnderrange := TIIB[IM2K1-EL3314]^TC Inputs Channel 1^Status^Underrange;
                                  .fbPowerMeter.fbThermoCouple.bOverrange := TIIB[IM2K1-EL3314]^TC Inputs Channel 1^Status^Overrange;
                                  .fbPowerMeter.fbThermoCouple.iRaw := TIIB[IM2K1-EL3314]^TC Inputs Channel 1^Value;
                                  .fbYagThermoCouple.bError := TIIB[IM2K1-EL3314]^TC Inputs Channel 2^Status^Error;
                                  .fbYagThermoCouple.bUnderrange := TIIB[IM2K1-EL3314]^TC Inputs Channel 2^Status^Underrange;
                                  .fbYagThermoCouple.bOverrange := TIIB[IM2K1-EL3314]^TC Inputs Channel 2^Status^Overrange;
                                  .fbYagThermoCouple.iRaw := TIIB[IM2K1-EL3314]^TC Inputs Channel 2^Value'}
        fbIM2K1: FB_PPM;
    END_VAR
    fbIM2K1.nTransitionAssertionID := 16#2210;
    fbIM2K1.nUnknownAssertionID := 16#2219;

    fbIM2K1.stOut.fPosition := -9.09;
    fbIM2K1.stOut.bUseRawCounts := FALSE;
    fbIM2K1.stOut.nRequestAssertionID := 16#2211;
    fbIM2K1.stOut.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM2K1.stOut.bValid := TRUE;

    fbIM2K1.stPower.fPosition := -48.19;
    fbIM2K1.stPower.bUseRawCounts := FALSE;
    fbIM2K1.stPower.nRequestAssertionID := 16#2212;
    fbIM2K1.stPower.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM2K1.stPower.bValid := TRUE;

    fbIM2K1.stYag1.fPosition := -72.19;
    fbIM2K1.stYag1.bUseRawCounts := FALSE;
    fbIM2K1.stYag1.nRequestAssertionID := 16#2213;
    fbIM2K1.stYag1.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM2K1.stYag1.bValid := TRUE;

    fbIM2K1.stYag2.fPosition := -98.2;
    fbIM2K1.stYag2.bUseRawCounts := FALSE;
    fbIM2K1.stYag2.nRequestAssertionID := 16#2214;
    fbIM2K1.stYag2.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM2K1.stYag2.bValid := TRUE;

    fbIM2K1(
        fbArbiter := GVL.fbArbiter,
        fbFFHWO := GVL.fbFastFaultOutput1,
        stYStage := Main.M2);

    END_PROGRAM


PRG_IM2K2_PPM
^^^^^^^^^^^^^

::

    PROGRAM PRG_IM2K2_PPM
    VAR
        {attribute 'pytmc' := '
            pv: IM2K2:PPM
            io: io
        '}
        {attribute 'TcLinkTo' := '.fbGige.iIlluminatorINT := TIIB[IM2K2-EL4004-E7]^AO Outputs Channel 1^Analog output;
                                  .fbGige.bGigePower := TIIB[IM2K2-EL2004-E3]^Channel 2^Output;
                                  .fbPowerMeter.iVoltageINT := TIIB[IM2K2-EL3062-E6]^AI Standard Channel 1^Value;
                                  .fbPowerMeter.fbThermoCouple.bError := TIIB[IM2K2-EL3314-E4]^TC Inputs Channel 1^Status^Error;
                                  .fbPowerMeter.fbThermoCouple.bUnderrange := TIIB[IM2K2-EL3314-E4]^TC Inputs Channel 1^Status^Underrange;
                                  .fbPowerMeter.fbThermoCouple.bOverrange := TIIB[IM2K2-EL3314-E4]^TC Inputs Channel 1^Status^Overrange;
                                  .fbPowerMeter.fbThermoCouple.iRaw := TIIB[IM2K2-EL3314-E4]^TC Inputs Channel 1^Value;
                                  .fbYagThermoCouple.bError := TIIB[IM2K2-EL3314-E4]^TC Inputs Channel 2^Status^Error;
                                  .fbYagThermoCouple.bUnderrange := TIIB[IM2K2-EL3314-E4]^TC Inputs Channel 2^Status^Underrange;
                                  .fbYagThermoCouple.bOverrange := TIIB[IM2K2-EL3314-E4]^TC Inputs Channel 2^Status^Overrange;
                                  .fbYagThermoCouple.iRaw := TIIB[IM2K2-EL3314-E4]^TC Inputs Channel 2^Value'}
        fbIM2K2: FB_PPM;
    END_VAR
    fbIM2K2.nTransitionAssertionID := 16#2220;
    fbIM2K2.nUnknownAssertionID := 16#22229;

    fbIM2K2.stOut.fPosition := -9.82;
    fbIM2K2.stOut.bUseRawCounts := FALSE;
    fbIM2K2.stOut.nRequestAssertionID := 16#2221;
    fbIM2K2.stOut.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM2K2.stOut.bValid := TRUE;

    fbIM2K2.stPower.fPosition := -48.92;
    fbIM2K2.stPower.bUseRawCounts := FALSE;
    fbIM2K2.stPower.nRequestAssertionID := 16#2222;
    fbIM2K2.stPower.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM2K2.stPower.bValid := TRUE;

    fbIM2K2.stYag1.fPosition := -72.92;
    fbIM2K2.stYag1.bUseRawCounts := FALSE;
    fbIM2K2.stYag1.nRequestAssertionID := 16#2223;
    fbIM2K2.stYag1.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM2K2.stYag1.bValid := TRUE;

    fbIM2K2.stYag2.fPosition := -98.93;
    fbIM2K2.stYag2.bUseRawCounts := FALSE;
    fbIM2K2.stYag2.nRequestAssertionID := 16#2224;
    fbIM2K2.stYag2.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM2K2.stYag2.bValid := TRUE;

    fbIM2K2(
        fbArbiter := GVL.fbArbiter,
        fbFFHWO := GVL.fbFastFaultOutput2,
        stYStage := Main.M6);

    END_PROGRAM


PRG_IM3K2_PPM
^^^^^^^^^^^^^

::

    PROGRAM PRG_IM3K2_PPM
    VAR
        {attribute 'pytmc' := '
            pv: IM3K2:PPM
            io: io
        '}
        {attribute 'TcLinkTo' := '.fbGige.iIlluminatorINT := TIIB[IM3K2-EL4004-E7]^AO Outputs Channel 1^Analog output;
                                  .fbGige.bGigePower := TIIB[IM3K2-EL2004-E3]^Channel 2^Output;
                                  .fbPowerMeter.iVoltageINT := TIIB[IM3K2-EL3062-E6]^AI Standard Channel 1^Value;
                                  .fbPowerMeter.fbThermoCouple.bError := TIIB[IM3K2-EL3314-E4]^TC Inputs Channel 1^Status^Error;
                                  .fbPowerMeter.fbThermoCouple.bUnderrange := TIIB[IM3K2-EL3314-E4]^TC Inputs Channel 1^Status^Underrange;
                                  .fbPowerMeter.fbThermoCouple.bOverrange := TIIB[IM3K2-EL3314-E4]^TC Inputs Channel 1^Status^Overrange;
                                  .fbPowerMeter.fbThermoCouple.iRaw := TIIB[IM3K2-EL3314-E4]^TC Inputs Channel 1^Value;
                                  .fbYagThermoCouple.bError := TIIB[IM3K2-EL3314-E4]^TC Inputs Channel 2^Status^Error;
                                  .fbYagThermoCouple.bUnderrange := TIIB[IM3K2-EL3314-E4]^TC Inputs Channel 2^Status^Underrange;
                                  .fbYagThermoCouple.bOverrange := TIIB[IM3K2-EL3314-E4]^TC Inputs Channel 2^Status^Overrange;
                                  .fbYagThermoCouple.iRaw := TIIB[IM3K2-EL3314-E4]^TC Inputs Channel 2^Value'}
        fbIM3K2: FB_PPM;
    END_VAR
    fbIM3K2.nTransitionAssertionID := 16#2320;
    fbIM3K2.nUnknownAssertionID := 16#2329;

    fbIM3K2.stOut.fPosition := -9.82;
    fbIM3K2.stOut.bUseRawCounts := FALSE;
    fbIM3K2.stOut.nRequestAssertionID := 16#2321;
    fbIM3K2.stOut.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM3K2.stOut.bValid := TRUE;

    fbIM3K2.stPower.fPosition := -48.92;
    fbIM3K2.stPower.bUseRawCounts := FALSE;
    fbIM3K2.stPower.nRequestAssertionID := 16#2322;
    fbIM3K2.stPower.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM3K2.stPower.bValid := TRUE;

    fbIM3K2.stYag1.fPosition := -72.92;
    fbIM3K2.stYag1.bUseRawCounts := FALSE;
    fbIM3K2.stYag1.nRequestAssertionID := 16#2323;
    fbIM3K2.stYag1.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM3K2.stYag1.bValid := TRUE;

    fbIM3K2.stYag2.fPosition := -98.93;
    fbIM3K2.stYag2.bUseRawCounts := FALSE;
    fbIM3K2.stYag2.nRequestAssertionID := 16#2324;
    fbIM3K2.stYag2.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM3K2.stYag2.bValid := TRUE;

    fbIM3K2(
        fbArbiter := GVL.fbArbiter,
        fbFFHWO := GVL.fbFastFaultOutput2,
        stYStage := Main.M7);

    END_PROGRAM


PRG_IM4K2_PPM
^^^^^^^^^^^^^

::

    PROGRAM PRG_IM4K2_PPM
    VAR
        {attribute 'pytmc' := '
            pv: IM4K2:PPM
            io: io
        '}
         {attribute 'TcLinkTo' := '.fbGige.iIlluminatorINT := TIIB[IM4K2-EL4004-E7]^AO Outputs Channel 1^Analog output;
                                  .fbGige.bGigePower := TIIB[IM4K2-EL2004-E3]^Channel 2^Output;
                                  .fbPowerMeter.iVoltageINT := TIIB[IM4K2-EL3062-E6]^AI Standard Channel 1^Value;
                                  .fbPowerMeter.fbThermoCouple.bError := TIIB[IM4K2-EL3314-E4]^TC Inputs Channel 1^Status^Error;
                                  .fbPowerMeter.fbThermoCouple.bUnderrange := TIIB[IM4K2-EL3314-E4]^TC Inputs Channel 1^Status^Underrange;
                                  .fbPowerMeter.fbThermoCouple.bOverrange := TIIB[IM4K2-EL3314-E4]^TC Inputs Channel 1^Status^Overrange;
                                  .fbPowerMeter.fbThermoCouple.iRaw := TIIB[IM4K2-EL3314-E4]^TC Inputs Channel 1^Value;
                                  .fbYagThermoCouple.bError := TIIB[IM4K2-EL3314-E4]^TC Inputs Channel 2^Status^Error;
                                  .fbYagThermoCouple.bUnderrange := TIIB[IM4K2-EL3314-E4]^TC Inputs Channel 2^Status^Underrange;
                                  .fbYagThermoCouple.bOverrange := TIIB[IM4K2-EL3314-E4]^TC Inputs Channel 2^Status^Overrange;
                                  .fbYagThermoCouple.iRaw := TIIB[IM4K2-EL3314-E4]^TC Inputs Channel 2^Value'}
        fbIM4K2: FB_PPM;
    END_VAR
    fbIM4K2.nTransitionAssertionID := 16#2420;
    fbIM4K2.nUnknownAssertionID := 16#2429;

    fbIM4K2.stOut.fPosition := -9.82;
    fbIM4K2.stOut.bUseRawCounts := FALSE;
    fbIM4K2.stOut.nRequestAssertionID := 16#2421;
    fbIM4K2.stOut.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM4K2.stOut.bValid := TRUE;

    fbIM4K2.stPower.fPosition := -48.92;
    fbIM4K2.stPower.bUseRawCounts := FALSE;
    fbIM4K2.stPower.nRequestAssertionID := 16#2422;
    fbIM4K2.stPower.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM4K2.stPower.bValid := TRUE;

    fbIM4K2.stYag1.fPosition := -72.92;
    fbIM4K2.stYag1.bUseRawCounts := FALSE;
    fbIM4K2.stYag1.nRequestAssertionID := 16#2423;
    fbIM4K2.stYag1.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM4K2.stYag1.bValid := TRUE;

    fbIM4K2.stYag2.fPosition := -98.93;
    fbIM4K2.stYag2.bUseRawCounts := FALSE;
    fbIM4K2.stYag2.nRequestAssertionID := 16#2424;
    fbIM4K2.stYag2.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM4K2.stYag2.bValid := TRUE;

    fbIM4K2(
        fbArbiter := GVL.fbArbiter,
        fbFFHWO := GVL.fbFastFaultOutput2,
        stYStage := Main.M8);

    END_PROGRAM


PRG_IM5K2_PPM
^^^^^^^^^^^^^

::

    PROGRAM PRG_IM5K2_PPM
    VAR
        {attribute 'pytmc' := '
            pv: IM5K2:PPM
            io: io
        '}
        {attribute 'TcLinkTo' := '.fbGige.iIlluminatorINT := TIIB[IM5K2-EL4004-E7]^AO Outputs Channel 1^Analog output;
                                  .fbGige.bGigePower := TIIB[IM5K2-EL2004-E3]^Channel 2^Output;
                                  .fbPowerMeter.iVoltageINT := TIIB[IM5K2-EL3062-E6]^AI Standard Channel 1^Value;
                                  .fbPowerMeter.fbThermoCouple.bError := TIIB[IM5K2-EL3314-E4]^TC Inputs Channel 1^Status^Error;
                                  .fbPowerMeter.fbThermoCouple.bUnderrange := TIIB[IM5K2-EL3314-E4]^TC Inputs Channel 1^Status^Underrange;
                                  .fbPowerMeter.fbThermoCouple.bOverrange := TIIB[IM5K2-EL3314-E4]^TC Inputs Channel 1^Status^Overrange;
                                  .fbPowerMeter.fbThermoCouple.iRaw := TIIB[IM5K2-EL3314-E4]^TC Inputs Channel 1^Value;
                                  .fbYagThermoCouple.bError := TIIB[IM5K2-EL3314-E4]^TC Inputs Channel 2^Status^Error;
                                  .fbYagThermoCouple.bUnderrange := TIIB[IM5K2-EL3314-E4]^TC Inputs Channel 2^Status^Underrange;
                                  .fbYagThermoCouple.bOverrange := TIIB[IM5K2-EL3314-E4]^TC Inputs Channel 2^Status^Overrange;
                                  .fbYagThermoCouple.iRaw := TIIB[IM5K2-EL3314-E4]^TC Inputs Channel 2^Value'}
        fbIM5K2: FB_PPM;
    END_VAR
    fbIM5K2.nTransitionAssertionID := 16#2520;
    fbIM5K2.nUnknownAssertionID := 16#2529;

    fbIM5K2.stOut.fPosition := -9.82;
    fbIM5K2.stOut.bUseRawCounts := FALSE;
    fbIM5K2.stOut.nRequestAssertionID := 16#2521;
    fbIM5K2.stOut.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM5K2.stOut.bValid := TRUE;

    fbIM5K2.stPower.fPosition := -48.92;
    fbIM5K2.stPower.bUseRawCounts := FALSE;
    fbIM5K2.stPower.nRequestAssertionID := 16#2522;
    fbIM5K2.stPower.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM5K2.stPower.bValid := TRUE;

    fbIM5K2.stYag1.fPosition := -72.92;
    fbIM5K2.stYag1.bUseRawCounts := FALSE;
    fbIM5K2.stYag1.nRequestAssertionID := 16#2523;
    fbIM5K2.stYag1.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM5K2.stYag1.bValid := TRUE;

    fbIM5K2.stYag2.fPosition := -98.93;
    fbIM5K2.stYag2.bUseRawCounts := FALSE;
    fbIM5K2.stYag2.nRequestAssertionID := 16#2524;
    fbIM5K2.stYag2.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM5K2.stYag2.bValid := TRUE;

    fbIM5K2(
        fbArbiter := GVL.fbArbiter,
        fbFFHWO := GVL.fbFastFaultOutput2,
        stYStage := Main.M14);

    END_PROGRAM


PRG_IM6K2_PPM
^^^^^^^^^^^^^

::

    PROGRAM PRG_IM6K2_PPM
    VAR
        {attribute 'pytmc' := '
            pv: IM6K2:PPM
            io: io
        '}
        {attribute 'TcLinkTo' := '.fbGige.iIlluminatorINT := TIIB[IM6K2-EL4004-E7]^AO Outputs Channel 1^Analog output;
                                  .fbGige.bGigePower := TIIB[IM6K2-EL2004-E3]^Channel 2^Output;
                                  .fbPowerMeter.iVoltageINT := TIIB[IM6K2-EL3062-E6]^AI Standard Channel 1^Value;
                                  .fbPowerMeter.fbThermoCouple.bError := TIIB[IM6K2-EL3314-E4]^TC Inputs Channel 1^Status^Error;
                                  .fbPowerMeter.fbThermoCouple.bUnderrange := TIIB[IM6K2-EL3314-E4]^TC Inputs Channel 1^Status^Underrange;
                                  .fbPowerMeter.fbThermoCouple.bOverrange := TIIB[IM6K2-EL3314-E4]^TC Inputs Channel 1^Status^Overrange;
                                  .fbPowerMeter.fbThermoCouple.iRaw := TIIB[IM6K2-EL3314-E4]^TC Inputs Channel 1^Value;
                                  .fbYagThermoCouple.bError := TIIB[IM6K2-EL3314-E4]^TC Inputs Channel 2^Status^Error;
                                  .fbYagThermoCouple.bUnderrange := TIIB[IM6K2-EL3314-E4]^TC Inputs Channel 2^Status^Underrange;
                                  .fbYagThermoCouple.bOverrange := TIIB[IM6K2-EL3314-E4]^TC Inputs Channel 2^Status^Overrange;
                                  .fbYagThermoCouple.iRaw 6K2-EL3314-E4]^TC Inputs Channel 2^Value'}
        fbIM6K2: FB_PPM;
        fbIM66K2: INT;
    END_VAR
    fbIM6K2.nTransitionAssertionID := 16#2620;
    fbIM6K2.nUnknownAssertionID := 16#2629;

    fbIM6K2.stOut.fPosition := -9.82;
    fbIM6K2.stOut.bUseRawCounts := FALSE;
    fbIM6K2.stOut.nRequestAssertionID := 16#2621;
    fbIM6K2.stOut.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM6K2.stOut.bValid := TRUE;

    fbIM6K2.stPower.fPosition := -48.92;
    fbIM6K2.stPower.bUseRawCounts := FALSE;
    fbIM6K2.stPower.nRequestAssertionID := 16#2622;
    fbIM6K2.stPower.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM6K2.stPower.bValid := TRUE;

    fbIM6K2.stYag1.fPosition := -72.92;
    fbIM6K2.stYag1.bUseRawCounts := FALSE;
    fbIM6K2.stYag1.nRequestAssertionID := 16#2623;
    fbIM6K2.stYag1.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM6K2.stYag1.bValid := TRUE;

    fbIM6K2.stYag2.fPosition := -98.93;
    fbIM6K2.stYag2.bUseRawCounts := FALSE;
    fbIM6K2.stYag2.nRequestAssertionID := 16#2624;
    fbIM6K2.stYag2.stBeamParams := PMPS_GVL.cstFullBeam;
    fbIM6K2.stYag2.bValid := TRUE;

    fbIM6K2(
        fbArbiter := GVL.fbArbiter,
        fbFFHWO := GVL.fbFastFaultOutput2,
        stYStage := Main.M25);

    END_PROGRAM


PRG_LI2K2_K2A
^^^^^^^^^^^^^

::

    PROGRAM PRG_LI2K2_K2A
    VAR
        {attribute 'pytmc' := '
            pv: LI2K2:K2A
            io: io
        '}
        fbLI2K2: FB_LIC;

        stSiBP: ST_BeamParams := PMPS_GVL.cstFullBeam;
        stFoilBP: ST_BeamParams := PMPS_GVL.cstFullBeam;
    END_VAR
    (*
       Avoid damage peak between 3.2 keV and 1.6 keV
       Boundaries are upper boundary of eV range
       2.3E3,  2.0E3,  1.82E3, 1.75E3, 1.65E3, 1.55E3, 1.45E3, 1.25E3,
       1.15E3, 850,    540,    450,    400,    350,    270,    250
       0       0       0       0      0       1       1       1
       1       1       1       1      1       1       1       1
    *)
    stSiBP.neVRange := 2#0000_0111_1111_1111;
    // Drop transmission to 20%
    stSiBP.nTran := 20;

    // Drop transmission to 10%
    stFoilBP.nTran := 10;

    fbLI2K2.nTransitionAssertionID := 16#4220;
    fbLI2K2.nUnknownAssertionID := 16#4229;

    fbLI2K2.stOut.fPosition := 0.118;
    fbLI2K2.stOut.bUseRawCounts := FALSE;
    fbLI2K2.stOut.nRequestAssertionID := 16#4221;
    fbLI2K2.stOut.stBeamParams := PMPS_GVL.cstFullBeam;
    fbLI2K2.stOut.bValid := TRUE;

    fbLI2K2.stMirror1.fPosition := -36.38;
    fbLI2K2.stMirror1.bUseRawCounts := FALSE;
    fbLI2K2.stMirror1.nRequestAssertionID := 16#4222;
    fbLI2K2.stMirror1.stBeamParams := stSiBP;
    fbLI2K2.stMirror1.bValid := TRUE;

    fbLI2K2.stMirror2.fPosition := -70.38;
    fbLI2K2.stMirror2.bUseRawCounts := FALSE;
    fbLI2K2.stMirror2.nRequestAssertionID := 16#4223;
    fbLI2K2.stMirror2.stBeamParams := stSiBP;
    fbLI2K2.stMirror2.bValid := TRUE;

    fbLI2K2.stTarget1.fPosition := -102.38;
    fbLI2K2.stTarget1.bUseRawCounts := FALSE;
    fbLI2K2.stTarget1.nRequestAssertionID := 16#4224;
    fbLI2K2.stTarget1.stBeamParams := stSiBP;
    fbLI2K2.stTarget1.bValid := TRUE;

    fbLI2K2(
        fbArbiter := GVL.fbArbiter,
        fbFFHWO := GVL.fbFastFaultOutput2,
        stYStage := Main.M11);

    END_PROGRAM


PRG_PF1K2_WFS
^^^^^^^^^^^^^

::

    PROGRAM PRG_PF1K2_WFS
    VAR
        {attribute 'pytmc' := '
            pv: PF1K2:WFS
            io: io
        '}
        {attribute 'TcLinkTo' := '.fbThermoCouple1.bError 		:= TIIB[PF1K2-EL3314-E5]^TC Inputs Channel 1^Status^Error;
                                  .fbThermoCouple1.bUnderrange	:= TIIB[PF1K2-EL3314-E5]^TC Inputs Channel 1^Status^Underrange;
                                  .fbThermoCouple1.bOverrange 	:= TIIB[PF1K2-EL3314-E5]^TC Inputs Channel 1^Status^Overrange;
                                  .fbThermoCouple1.iRaw 		:= TIIB[PF1K2-EL3314-E5]^TC Inputs Channel 1^Value;
                                  .fbThermoCouple2.bError 		:= TIIB[PF1K2-EL3314-E5]^TC Inputs Channel 2^Status^Error;
                                  .fbThermoCouple2.bUnderrange 	:= TIIB[PF1K2-EL3314-E5]^TC Inputs Channel 2^Status^Underrange;
                                  .fbThermoCouple2.bOverrange 	:= TIIB[PF1K2-EL3314-E5]^TC Inputs Channel 2^Status^Overrange;
                                  .fbThermoCouple2.iRaw 		:= TIIB[PF1K2-EL3314-E5]^TC Inputs Channel 2^Value'}
        fbPF1K2: FB_WFS;

        stSiBP: ST_BeamParams := PMPS_GVL.cstFullBeam;
    END_VAR
    (*
       Avoid damage peak between 3.2 keV and 1.6 keV
       Boundaries are upper boundary of eV range
       2.3E3,  2.0E3,  1.82E3, 1.75E3, 1.65E3, 1.55E3, 1.45E3, 1.25E3,
       1.15E3, 850,    540,    450,    400,    350,    270,    250
       0       0       0       0      0       1       1       1
       1       1       1       1      1       1       1       1
    *)
    stSiBP.neVRange := 2#0000_0111_1111_1111;
    // Drop transmission to 20%
    stSiBP.nTran := 20;

    fbPF1K2.nTransitionAssertionID := 16#3120;
    fbPF1K2.nUnknownAssertionID := 16#3129;

    fbPF1K2.stOut.fPosition := -10.5;
    fbPF1K2.stOut.bUseRawCounts := FALSE;
    fbPF1K2.stOut.nRequestAssertionID := 16#3121;
    fbPF1K2.stOut.stBeamParams := PMPS_GVL.cstFullBeam;
    fbPF1K2.stOut.bValid := TRUE;

    fbPF1K2.stTarget1.fPosition := -93.033;
    fbPF1K2.stTarget1.bUseRawCounts := FALSE;
    fbPF1K2.stTarget1.nRequestAssertionID := 16#3122;
    fbPF1K2.stTarget1.stBeamParams := stSiBP;
    fbPF1K2.stTarget1.bValid := TRUE;

    fbPF1K2.stTarget2.fPosition := -78.658;
    fbPF1K2.stTarget2.bUseRawCounts := FALSE;
    fbPF1K2.stTarget2.nRequestAssertionID := 16#3123;
    fbPF1K2.stTarget2.stBeamParams := stSiBP;
    fbPF1K2.stTarget2.bValid := TRUE;

    fbPF1K2.stTarget3.fPosition := -64.282;
    fbPF1K2.stTarget3.bUseRawCounts := FALSE;
    fbPF1K2.stTarget3.nRequestAssertionID := 16#3124;
    fbPF1K2.stTarget3.stBeamParams := stSiBP;
    fbPF1K2.stTarget3.bValid := TRUE;

    fbPF1K2.stTarget4.fPosition := -49.907;
    fbPF1K2.stTarget4.bUseRawCounts := FALSE;
    fbPF1K2.stTarget4.nRequestAssertionID := 16#3125;
    fbPF1K2.stTarget4.stBeamParams := stSiBP;
    fbPF1K2.stTarget4.bValid := TRUE;

    fbPF1K2.stTarget5.fPosition := -35.533;
    fbPF1K2.stTarget5.bUseRawCounts := FALSE;
    fbPF1K2.stTarget5.nRequestAssertionID := 16#3126;
    fbPF1K2.stTarget5.stBeamParams := stSiBP;
    fbPF1K2.stTarget5.bValid := TRUE;

    fbPF1K2(
        fbArbiter := GVL.fbArbiter,
        fbFFHWO := GVL.fbFastFaultOutput2,
        stYStage := Main.M12,
        stZStage := Main.M13);

    END_PROGRAM


PRG_PF2K2_WFS
^^^^^^^^^^^^^

::

    PROGRAM PRG_PF2K2_WFS
    VAR
        {attribute 'pytmc' := '
            pv: PF2K2:WFS
            io: io
        '}
        {attribute 'TcLinkTo' := '.fbThermoCouple1.bError 		:= TIIB[PF2K2-EL3314-E5]^TC Inputs Channel 1^Status^Error;
                                  .fbThermoCouple1.bUnderrange	:= TIIB[PF2K2-EL3314-E5]^TC Inputs Channel 1^Status^Underrange;
                                  .fbThermoCouple1.bOverrange 	:= TIIB[PF2K2-EL3314-E5]^TC Inputs Channel 1^Status^Overrange;
                                  .fbThermoCouple1.iRaw 		:= TIIB[PF2K2-EL3314-E5]^TC Inputs Channel 1^Value;
                                  .fbThermoCouple2.bError 		:= TIIB[PF2K2-EL3314-E5]^TC Inputs Channel 2^Status^Error;
                                  .fbThermoCouple2.bUnderrange 	:= TIIB[PF2K2-EL3314-E5]^TC Inputs Channel 2^Status^Underrange;
                                  .fbThermoCouple2.bOverrange 	:= TIIB[PF2K2-EL3314-E5]^TC Inputs Channel 2^Status^Overrange;
                                  .fbThermoCouple2.iRaw 		:= TIIB[PF2K2-EL3314-E5]^TC Inputs Channel 2^Value'}
        fbPF2K2: FB_WFS;

        stSiBP: ST_BeamParams := PMPS_GVL.cstFullBeam;
    END_VAR
    (*
       Avoid damage peak between 3.2 keV and 1.6 keV
       Boundaries are upper boundary of eV range
       2.3E3,  2.0E3,  1.82E3, 1.75E3, 1.65E3, 1.55E3, 1.45E3, 1.25E3,
       1.15E3, 850,    540,    450,    400,    350,    270,    250
       0       0       0       0      0       1       1       1
       1       1       1       1      1       1       1       1
    *)
    stSiBP.neVRange := 2#0000_0111_1111_1111;
    // Drop transmission to 20%
    stSiBP.nTran := 20;

    fbPF2K2.nTransitionAssertionID := 16#3220;
    fbPF2K2.nUnknownAssertionID := 16#3229;

    fbPF2K2.stOut.fPosition := -10.5;
    fbPF2K2.stOut.bUseRawCounts := FALSE;
    fbPF2K2.stOut.nRequestAssertionID := 16#3221;
    fbPF2K2.stOut.stBeamParams := PMPS_GVL.cstFullBeam;
    fbPF2K2.stOut.bValid := TRUE;

    fbPF2K2.stTarget1.fPosition := -93.033;
    fbPF2K2.stTarget1.bUseRawCounts := FALSE;
    fbPF2K2.stTarget1.nRequestAssertionID := 16#3222;
    fbPF2K2.stTarget1.stBeamParams := stSiBP;
    fbPF2K2.stTarget1.bValid := TRUE;

    fbPF2K2.stTarget2.fPosition := -78.658;
    fbPF2K2.stTarget2.bUseRawCounts := FALSE;
    fbPF2K2.stTarget2.nRequestAssertionID := 16#3223;
    fbPF2K2.stTarget2.stBeamParams := stSiBP;
    fbPF2K2.stTarget2.bValid := TRUE;

    fbPF2K2.stTarget3.fPosition := -64.282;
    fbPF2K2.stTarget3.bUseRawCounts := FALSE;
    fbPF2K2.stTarget3.nRequestAssertionID := 16#3224;
    fbPF2K2.stTarget3.stBeamParams := stSiBP;
    fbPF2K2.stTarget3.bValid := TRUE;

    fbPF2K2.stTarget4.fPosition := -49.907;
    fbPF2K2.stTarget4.bUseRawCounts := FALSE;
    fbPF2K2.stTarget4.nRequestAssertionID := 16#3225;
    fbPF2K2.stTarget4.stBeamParams := stSiBP;
    fbPF2K2.stTarget4.bValid := TRUE;

    fbPF2K2.stTarget5.fPosition := -35.533;
    fbPF2K2.stTarget5.bUseRawCounts := FALSE;
    fbPF2K2.stTarget5.nRequestAssertionID := 16#3226;
    fbPF2K2.stTarget5.stBeamParams := stSiBP;
    fbPF2K2.stTarget5.bValid := TRUE;

    fbPF2K2(
        fbArbiter := GVL.fbArbiter,
        fbFFHWO := GVL.fbFastFaultOutput2,
        stYStage := Main.M23,
        stZStage := Main.M24);

    END_PROGRAM


PRG_TM1K2_ATM
^^^^^^^^^^^^^

::

    PROGRAM PRG_TM1K2_ATM
    VAR
        {attribute 'pytmc' := '
            pv: TM1K2:ATM
            io: io
        '}
        {attribute 'TcLinkTo' := '.fbThermoCouple1.bError := TIIB[TM1K2-EL3314-E5]^TC Inputs Channel 1^Status^Error;
                                  .fbThermoCouple1.bUnderrange := TIIB[TM1K2-EL3314-E5]^TC Inputs Channel 1^Status^Underrange;
                                  .fbThermoCouple1.bOverrange := TIIB[TM1K2-EL3314-E5]^TC Inputs Channel 1^Status^Overrange;
                                  .fbThermoCouple1.iRaw := TIIB[TM1K2-EL3314-E5]^TC Inputs Channel 1^Value'}
        fbTM1K2: FB_ATM;
    END_VAR
    fbTM1K2.nTransitionAssertionID := 16#5120;
    fbTM1K2.nUnknownAssertionID := 16#5129;

    fbTM1K2.stOut.fPosition := -15;
    fbTM1K2.stOut.bUseRawCounts := FALSE;
    fbTM1K2.stOut.nRequestAssertionID := 16#5121;
    fbTM1K2.stOut.stBeamParams := PMPS_GVL.cstFullBeam;
    fbTM1K2.stOut.bValid := TRUE;

    fbTM1K2.stTarget1.fPosition := -39.124;
    fbTM1K2.stTarget1.bUseRawCounts := FALSE;
    fbTM1K2.stTarget1.nRequestAssertionID := 16#5122;
    fbTM1K2.stTarget1.stBeamParams := PMPS_GVL.cstFullBeam;
    fbTM1K2.stTarget1.bValid := TRUE;

    fbTM1K2.stTarget2.fPosition := -53.5;
    fbTM1K2.stTarget2.bUseRawCounts := FALSE;
    fbTM1K2.stTarget2.nRequestAssertionID := 16#5123;
    fbTM1K2.stTarget2.stBeamParams := PMPS_GVL.cstFullBeam;
    fbTM1K2.stTarget2.bValid := TRUE;

    fbTM1K2.stTarget3.fPosition := -67.874;
    fbTM1K2.stTarget3.bUseRawCounts := FALSE;
    fbTM1K2.stTarget3.nRequestAssertionID := 16#5124;
    fbTM1K2.stTarget3.stBeamParams := PMPS_GVL.cstFullBeam;
    fbTM1K2.stTarget3.bValid := TRUE;

    fbTM1K2.stTarget4.fPosition := -82.25;
    fbTM1K2.stTarget4.bUseRawCounts := FALSE;
    fbTM1K2.stTarget4.nRequestAssertionID := 16#5125;
    fbTM1K2.stTarget4.stBeamParams := PMPS_GVL.cstFullBeam;
    fbTM1K2.stTarget4.bValid := TRUE;

    fbTM1K2.stTarget5.fPosition := -96.623;
    fbTM1K2.stTarget5.bUseRawCounts := FALSE;
    fbTM1K2.stTarget5.nRequestAssertionID := 16#5126;
    fbTM1K2.stTarget5.stBeamParams := PMPS_GVL.cstFullBeam;
    fbTM1K2.stTarget5.bValid := TRUE;

    fbTM1K2(
        fbArbiter := GVL.fbArbiter,
        fbFFHWO := GVL.fbFastFaultOutput2,
        stYStage := Main.M9,
        stXStage := Main.M10);

    END_PROGRAM


PRG_TM2K2_ATM
^^^^^^^^^^^^^

::

    PROGRAM PRG_TM2K2_ATM
    VAR
        {attribute 'pytmc' := '
            pv: TM2K2:ATM
            io: io
        '}
        {attribute 'TcLinkTo' := '.fbThermoCouple1.bError := TIIB[TM2K2-EL3314-E5]^TC Inputs Channel 1^Status^Error;
                                  .fbThermoCouple1.bUnderrange := TIIB[TM2K2-EL3314-E5]^TC Inputs Channel 1^Status^Underrange;
                                  .fbThermoCouple1.bOverrange := TIIB[TM2K2-EL3314-E5]^TC Inputs Channel 1^Status^Overrange;
                                  .fbThermoCouple1.iRaw := TIIB[TM2K2-EL3314-E5]^TC Inputs Channel 1^Value'}
        fbTM2K2: FB_ATM;
    END_VAR
    fbTM2K2.nTransitionAssertionID := 16#5220;
    fbTM2K2.nUnknownAssertionID := 16#5229;

    fbTM2K2.stOut.fPosition := -15;
    fbTM2K2.stOut.bUseRawCounts := FALSE;
    fbTM2K2.stOut.nRequestAssertionID := 16#5221;
    fbTM2K2.stOut.stBeamParams := PMPS_GVL.cstFullBeam;
    fbTM2K2.stOut.bValid := TRUE;

    fbTM2K2.stTarget1.fPosition := -39.124;
    fbTM2K2.stTarget1.bUseRawCounts := FALSE;
    fbTM2K2.stTarget1.nRequestAssertionID := 16#5222;
    fbTM2K2.stTarget1.stBeamParams := PMPS_GVL.cstFullBeam;
    fbTM2K2.stTarget1.bValid := TRUE;

    fbTM2K2.stTarget2.fPosition := -53.5;
    fbTM2K2.stTarget2.bUseRawCounts := FALSE;
    fbTM2K2.stTarget2.nRequestAssertionID := 16#5223;
    fbTM2K2.stTarget2.stBeamParams := PMPS_GVL.cstFullBeam;
    fbTM2K2.stTarget2.bValid := TRUE;

    fbTM2K2.stTarget3.fPosition := -67.874;
    fbTM2K2.stTarget3.bUseRawCounts := FALSE;
    fbTM2K2.stTarget3.nRequestAssertionID := 16#5224;
    fbTM2K2.stTarget3.stBeamParams := PMPS_GVL.cstFullBeam;
    fbTM2K2.stTarget3.bValid := TRUE;

    fbTM2K2.stTarget4.fPosition := -82.25;
    fbTM2K2.stTarget4.bUseRawCounts := FALSE;
    fbTM2K2.stTarget4.nRequestAssertionID := 16#5225;
    fbTM2K2.stTarget4.stBeamParams := PMPS_GVL.cstFullBeam;
    fbTM2K2.stTarget4.bValid := TRUE;

    fbTM2K2.stTarget5.fPosition := -96.623;
    fbTM2K2.stTarget5.bUseRawCounts := FALSE;
    fbTM2K2.stTarget5.nRequestAssertionID := 16#5226;
    fbTM2K2.stTarget5.stBeamParams := PMPS_GVL.cstFullBeam;
    fbTM2K2.stTarget5.bValid := TRUE;

    fbTM2K2(
        fbArbiter := GVL.fbArbiter,
        fbFFHWO := GVL.fbFastFaultOutput2,
        stYStage := Main.M15,
        stXStage := Main.M16);

    END_PROGRAM

